# notely-ml

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLEANUP_SUMMARY.md  DOCKER_DEPLOYMENT.md  DOCKER_QUICKSTART.md  Dockerfile  GCP_DEPLOYMENT.md  GCP_QUICKSTART.md  Makefile  POETRY_SETUP_COMPLETE.md  README.md  TESTING_SETUP.md  TROCR.py  app.py  deploy-gcp.sh  docker-compose.yml  pyproject.toml  requirements.txt  run_demo.py  run_tests.py  test.py  test_mongo_connection.py  test_real_image.py  visualize_results.py
.cursor/rules/: project.mdc
app/: __init__.py  main.py  test.py
app/api/routes/: drawing.py  ocr.py  segmentation.py
app/controllers/: page_analyzer_controller.py  segmentation_controller.py
app/core/: config.py
app/models/: api_models.py  drawing_models.py  page_segmentation_models.py  segmentation_models.py
app/repositories/: drawing_repository.py
app/services/: htr.py  segmentation_service.py
app/services/common/: __init__.py  preprocessing.py  utils.py  visualization.py
app/services/document_segmentation/: __init__.py  config.py  main.py  segmentation.py  visualization.py
app/services/htr/: __init__.py  config.py  indexing.py  main.py  recognition.py
app/services/legacy_page_analyzer/engines/: ocr_processors.py  processors.py
app/services/legacy_page_analyzer/interfaces/: interfaces.py
app/services/legacy_page_analyzer/models/: __init__.py  config.py  elements.py  results.py
app/services/page_analyzer/engines/: gemini_processor.py  ocr_processors.py  processors.py  trocr_processor.py
app/services/page_analyzer/interfaces/: interfaces.py  processors.py
app/services/page_analyzer/models/: elements.py  models.py  results.py
app/services/page_analyzer/utils/: highlighting.py  search.py
app/services/page_segmentation/: gemini_segmentor.py  unstructuredio_processor.py  utils.py
app/services/query_parser/: query_parser.py
app/services/simple_ocr_service/: main.py
app/services/unstructured_segmentation/: README.md  __init__.py  api.py  config.py  main.py
checkpoints/: emnist_cnn_best.pth  mnist_cnn.pth
jupyter/: cnn_test.ipynb
models/: cnn.py  content_encoder.py  generation.py  generator.py  mnist_cnn.pth
models/handwriting_cgan/: discriminator.py  style_encoder.py
models/handwriting_text_search/: patch_embedding.py  vision_transformer_encoder_block.py
notebooks/: cgan.ipynb  cgan_alt.ipynb  cnn.ipynb  cnn_alt.ipynb  ocr.ipynb  sandbox.ipynb
output/: notability_segmentation.json  word_detection_results.json
scripts/: cnn.ipynb  cnn_test.ipynb  ctrl-f.py  dev.py  dev_setup.py  format.py  lint.py  predict.py  run.sh  test.py  test.sh  train.py  train_emnist_cnn.py  type_check.py
src/: app.py
src/models/: __init__.py  recognition.py
src/utils/: data_loader.py  preprocess.py
tests/: COMPREHENSIVE_TEST_RESULTS.md  comprehensive_test_all_images.py  conftest.py  demo_segmentation_on_real_data.py  run_general_tests.py  smart_backend_selection.py  test_real_image.py  test_trocr.py  usage_example.py
tests/repositories/: drawing_repository.py
tests/results/: query_parser_result.json
tests/services/page_segmentation/: test_gemini_segmentor.py
tests/services/query_parser/: test_query_parser.py
tests/services/segmentation/: README.md  __init__.py  conftest.py  run_segmentation_tests.py  test_segmentation_controller.py  test_segmentation_integration.py  test_segmentation_models.py  test_segmentation_performance.py  test_segmentation_service.py
trained_models/: emnist_cnn_balanced_86.88.pth  emnist_cnn_balanced_86.91.pth  emnist_cnn_balanced_86.93.pth  emnist_cnn_balanced_89.29.pth  emnist_cnn_byclass.pth
training/: train.py
utils/: __init__.py  data_loader.py  preprocess.py
